# local-rag

./: .gitignore  CLAUDE.md  Makefile  README.md  config.example.json  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
cmd/local-rag/: cmd_collections.go  cmd_gui.go  cmd_index.go  cmd_prune.go  cmd_search.go  cmd_status.go  main.go
configs/: config.example.json
docs/: architecture.md  emclient-schema.md  hybrid-search-and-rrf.md  ollama-and-embeddings.md
internal/chunker/: chunker.go  chunker_test.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  migrate.go  prune_test.go  schema.go
internal/embeddings/: ollama.go  ollama_test.go  resolve_test.go
internal/gui/: app.go  icon.go  launchd.go  loghandler.go  logs.go  services.go  settings.go
internal/indexer/: calibre.go  email.go  git.go  git_test.go  indexer.go  indexer_test.go  obsidian.go  prune.go  prune_test.go  rss.go
internal/mcp/: server.go  server_test.go  tools.go
internal/parser/: calibre.go  code.go  code_test.go  docx.go  docx_test.go  epub.go  markdown.go  ocr.go  parser.go  pdf.go  plaintext.go  rss.go
internal/search/: search.go  search_test.go  vector_test.go
local-rag-go/: FyneApp.toml  Makefile  README.md  go.mod  go.sum
local-rag-go/.github/workflows/: release.yml
local-rag-go/cmd/local-rag/: cmd_serve.go  main.go
local-rag-go/internal/config/: config.go
local-rag-go/internal/gui/: app.go  logs.go  services.go  settings.go  wake_darwin.go  wake_darwin.m  wake_other.go
local-rag-go/internal/indexer/: email.go  git_test.go  (+2 more)
local-rag-go/scripts/: build-app.sh
scripts/: build-app.sh  build-dmg.sh
scripts/gen-icon/: main.go
src/local_rag/: cli.py  config.py  db.py  embeddings.py  mcp_server.py  search.py
tests/: test_code_parser.py  test_services.py
(+36 files in other folders)
