[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag"
version = "0.1.0"
description = "Fully local RAG system for Obsidian, email, and project documents"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.6",
    "ollama>=0.4.0",
    "click>=8.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.scripts]
local-rag = "local_rag.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]